Implement merge sort algorithm

--- a/CourseraStanfordAlgorithms/todo
+++ b/CourseraStanfordAlgorithms/todo
@@ -1,3 +1,5 @@
 KaratsubaAlgorithm
   move number_table_ to separate class and cover it by unittests
   multiplication should use stack instead of recursion
+MergeSort
+  algorithm shoud be stack based insted of recusrion based
